// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiProgress has labelProps 1`] = `
Array [
  <div
    class="euiProgress__data euiProgress__data--secondary"
  >
    <span
      class="euiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`EuiProgress has max 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
/>
`;

exports[`EuiProgress has value 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress has valueText and label 1`] = `
Array [
  <div
    class="euiProgress__data euiProgress__data--secondary"
  >
    <span
      class="euiProgress__label"
    >
      Label
    </span>
    <span
      class="euiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="true"
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`EuiProgress is determinate 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
  value="50"
/>
`;

exports[`EuiProgress is indeterminate 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress valueText is true 1`] = `
Array [
  <div
    class="euiProgress__data euiProgress__data--secondary"
  >
    <span
      class="euiProgress__valueText"
    >
      50%
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;
